testing/airootfs/steam/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Fri Jul 31 00:14:49 2015
*security
:INPUT ACCEPT [24:2888]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [29:2696]
COMMIT
# Completed on Fri Jul 31 00:14:49 2015
# Generated by iptables-save v1.4.21 on Fri Jul 31 00:14:49 2015
*raw
:PREROUTING ACCEPT [29:3348]
:OUTPUT ACCEPT [29:2696]
COMMIT
# Completed on Fri Jul 31 00:14:49 2015
# Generated by iptables-save v1.4.21 on Fri Jul 31 00:14:49 2015
*mangle
:PREROUTING ACCEPT [29:3348]
:INPUT ACCEPT [24:2888]
:FORWARD ACCEPT [5:460]
:OUTPUT ACCEPT [29:2696]
:POSTROUTING ACCEPT [29:2696]
COMMIT
# Completed on Fri Jul 31 00:14:49 2015
# Generated by iptables-save v1.4.21 on Fri Jul 31 00:14:49 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Fri Jul 31 00:14:49 2015
# Generated by iptables-save v1.4.21 on Fri Jul 31 00:14:49 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [5:460]
:OUTPUT ACCEPT [29:2696]
:LO - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -i lo -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m conntrack --ctstate NEW -j TCP
-A INPUT -j LOG --log-prefix DROP --log-level 6
-A INPUT -j DROP
-A TCP -p tcp -m tcp --dport 31279 -j ACCEPT
-A TCP -j LOG --log-prefix TCP --log-level 6
-A TCP -j DROP
-A UDP -j LOG --log-prefix UDP --log-level 6
-A UDP -j DROP
COMMIT
# Completed on Fri Jul 31 00:14:49 2015
